app/assets/stylesheets/static_pages.scss
// Place all the styles related to the static_pages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

/* ---For Sticky Footer---*/
* {
  margin: 0;
}
html, body {
  height: 100%;
}
.page-wrap {
  min-height: 100%;
  /* equal to footer height */
  margin-bottom: -60px; 
}
.page-wrap:after {
  content: "";
  display: block;
}
.site-footer, .page-wrap:after {
  height: 60px; 
}
.site-footer {
  background: white;
  font-family: Futura, Helvetica, Arial, sans-serif;
	text-align: center;
  font-size: 1em;
	font-weight: 900;
	clear: both;
	padding-top: 2em;

}
/*---END For Sticky Footer---*/

/*---Navbar Design---*/

.navbar{
	width: 100%;
}
.navbar-header a{
	font-family: Futura, Helvetica, Arial, sans-serif;
	color: #009999;
	font-size: 1.5em;
	font-weight: 900;
	text-decoration: none;
	margin-left: 1em;
}
.navbar-header a:hover{
	color: #990000;
	background-color: transparent;
}

.navbar-default .navbar-collapse, .navbar-default .navbar-form{
	border: 0.5px solid #99d6d6; 
	border-radius: 15px;
	background-color: #fffff0;
}

/*.navbar-right>ul>li>a{
	font-family: Futura, Helvetica, Arial, sans-serif;
	color: #004d00;
	font-size: 1.5em;
	font-weight: 900;
}
*/
.navbar-default .navbar-nav>li>a {
  color: #004d00;
  font-family: Futura, Helvetica, Arial, sans-serif;
	color: #009999;
	font-size: 1.5em;
	font-weight: 900;
	padding: 0.7em 0.4em;
}
#log_button{
  margin-right: 1.3em;
}
.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover{
	color: #990000;
}
/* Custom default button */
.btn-default,
.btn-default:hover,
.btn-default:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #fff;
  margin-top: 0em;
}

.form-control{
	display: inline-block;
	width: 60%;
	padding: 1em 2em 1em;
	margin-top: 0.5em;
	border-color: #ccc;
} 
#search_form{
  margin-right: 0em;
  width: 30%
  
}

/*---END Navbar Design---*/

h1 {
	font-family: Futura, Helvetica, Arial, sans-serif;
	text-align: center;
	padding-top: 1em;
	margin-top: 1em;
	margin-bottom: 20px;
	color: #890000;
	font-size: 2em;
	font-weight: 900;
}
h2 {
	font-family: Marck Script, Futura, Helvetica, Arial, sans-serif;
	text-align: center;
	padding-top: 0.6em;
	margin-top: 0.2em;
	margin-bottom: 20px;
	color: black;
	font-size: 2.5em;
	font-weight: 900;
}
h3{
	font-family: Futura, Helvetica, Arial, sans-serif;
	font-size: 1.8em;
	font-weight: 700;
	text-decoration: blink;
}
p{
	font-family: Futura, Helvetica, Arial, sans-serif;
	font-size: 1.5em;
	font-weight: 500;
	/*margin-left: 30px;*/
}
a:visited{
	color: #890000;
}

/*---Styling Images---*/
.bicycle{
	display: block;
	margin: auto;
	width: 70%; 
	height: 70%;
}
.construction{
	padding: 2em;
	display: block;
	margin: auto;
	width: 40%; 
	height: 40%;
}
/*---End Styling Images---*/

.special_offer{
	display: block;
	margin-left: auto;
	margin-right: auto;
	width: 60%;
}
/*---Bulging Price on the Landing_Page---*/
#map{
	padding: 1em;
	margin: auto;
}
@-webkit-keyframes fontbulger {
        0%, 100% {
                font-size: 12px;
        }
        50% {
                font-size: 16px;
        }
}
#box {
     -webkit-animation: fontbulger 2s infinite;
}
/*---END_Bulging Price on the Landing_Page---*/


/*---About Page---*/
.about{
	text-align: justify;
	line-height: 1.2em;
}
#about{
	text-align: center;
}
/*---END About Page---*/

/*---Index Page---*/
.carousel{
	margin: 4em auto;
}
.carousel-inner>.item>a>img{
	height: 70%;
	width: 70%;
	margin-right: auto;
	margin-left: auto;	
}
a:hover{
	background-color: transparent;
}
.carousel-caption{
	color: #009999;
	font-size: 2.5em;
	font-family: Marck Script, Futura, Helvetica, Arial, sans-serif;
	font-weight: 900;
	bottom: 1em;
}
/*	line-height: 2em;
	font-family: Marck Script, Futura, Helvetica, Arial, sans-serif;
	text-align: center;
	padding-top: 0.6em;
	margin-top: 0.2em;
	margin-bottom: 20px;
	color: black;
	font-size: 2.5em;
	font-weight: 900;
*/
ol.carousel-indicators li{
	border-color: #009999;
	background: transparent;
}
ol.carousel-indicators li.active {
  background: #009999;
}
/*---END Index Page---*/

/*---Contact Form---*/
.form-group{
  margin-left: 15em;
}
/*---END Contact Form---*/

/*---Flash notice tags---*/
.notice, .alert, #notice, .alert-info{
  position: absolute;
  margin-top: 2.6em;
  background-color: #e5f4f4;
  border: 0.5px solid #99d6d6; 
  border-radius: 15px;
  text-align: center;
  color: black;
} 

/*--for -login & sign up & edit user--*/
#new_session, #new_user, #edit_user{
  margin-top: 1em;
  padding-top: 1em;
}
.rated{
  margin-bottom: 0.5em;
}

